--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+attrs==19.1.0
 Click==7.0
 Flask==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.10.1
+jsonschema==3.0.2
 MarkupSafe==1.1.1
 pkg-resources==0.0.0
+pyrsistent==0.15.4
+six==1.12.0
 uWSGI==2.0.18
 Werkzeug==0.15.5
